[package]
name = "reactiontime"
version = "0.1.0"
authors = ["Lewis Diamond <lewis@jogogo.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8"
termion = "1.5"
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
